content/docs/0.8.x/reference/cli/commands/keptn_get_project.md
---
date: "2020-11-19T19:04:54+05:30"
title: "keptn get project"
slug: keptn_get_project
---
## keptn get project

Get details of a Keptn project

### Synopsis

Get all projects or details of a given Keptn project

```
keptn get project [flags]
```

### Examples

```
keptn get projects
NAME            CREATION DATE
sockshop        2020-05-28T10:25:50+02:00
shirtshop       2020-05-28T10:26:22+02:00
	
keptn get project sockshop
NAME           CREATION DATE                 
sockshop       2020-04-06T14:35:40.210Z

keptn get project sockshop -output=yaml  # Returns project details in YAML format

keptn get project sockshop -output=json  # Returns project details in JSON format

```

### Options

```
  -h, --help            help for project
  -o, --output string   Output format. One of json|yaml
```

### Options inherited from parent commands

```
      --mock                 Disables communication to a Keptn endpoint
  -n, --namespace string     Specify the namespace where Keptn should be installed, used and uninstalled in (default keptn). (default "keptn")
  -q, --quiet                Suppresses debug and info messages
      --suppress-websocket   Disables WebSocket communication to suppress info messages from services running inside Keptn
  -v, --verbose              Enables verbose logging to print debug messages
```

### SEE ALSO

* [keptn get](../keptn_get/)	 - Displays an event or Keptn entities such as project, stage, or service

###### Auto generated by spf13/cobra on 19-Nov-2020
