content/docs/0.11.x/reference/cli/commands/keptn_get_project.md
---
date: "2021-11-25T14:20:40Z"
title: "keptn get project"
slug: keptn_get_project
---
## keptn get project

Get details of a Keptn project

### Synopsis

Get all projects or details of a given Keptn project

```
keptn get project [flags]
```

### Examples

```
keptn get projects
NAME            CREATION DATE
sockshop        2020-05-28T10:25:50+02:00
shirtshop       2020-05-28T10:26:22+02:00
	
keptn get project sockshop
NAME           CREATION DATE                 
sockshop       2020-04-06T14:35:40.210Z

keptn get project sockshop -output=yaml  # Returns project details in YAML format

keptn get project sockshop -output=json  # Returns project details in JSON format

```

### Options

```
  -o, --output string   Output format. One of json|yaml
```

### Options inherited from parent commands

```
      --config-file string   Specify custom Keptn Config file path (default: ~/.keptn/config)
  -h, --help                 help
      --mock                 Disables communication to a Keptn endpoint
  -n, --namespace string     Specify the namespace where Keptn should be installed, used and uninstalled in (default "keptn")
  -q, --quiet                Suppresses debug and info messages
  -v, --verbose              Enables verbose logging to print debug messages
  -y, --yes                  Assume yes for all user prompts
```

### SEE ALSO

* [keptn get](../keptn_get/)	 - Displays an event or Keptn entities such as project, stage, or service

###### Auto generated by spf13/cobra on 25-Nov-2021
